k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  serviceName: qbittorrent
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: qbittorrentofficial/qbittorrent-nox:4.6.7-1
        ports:
        - containerPort: 6881
        - containerPort: 8080
        volumeMounts:
        - name: mnt-volume
          mountPath: /mnt
        - name: config-volume
          mountPath: /config
        - name: downloads-volume
          mountPath: /downloads
      volumes:
      - name: mnt-volume
        hostPath:
          path: /mnt
          type: Directory
      - name: config-volume
        hostPath:
          path: /opt/k3s/qbittorrent/config
          type: Directory
      - name: downloads-volume
        hostPath:
          path: /opt/k3s/qbittorrent/downloads
          type: Directory
